--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django-Select2==4.3.2
 MySQL-python==1.2.5
 Pillow==3.4.2
 Unidecode==0.04.19
+aldryn-background-image==0.1.1
 argparse==1.2.1
 cmsplugin-filer==1.1.3
 dj-database-url==0.4.1
